Bug 384740 - Donloaded file via Bluetooth is proposed to be opened from wrong path /usr/share/plasma/plasmoids/org.kde.plasma.notifications/contents/ui/XX-XX-XX-XX-XX-XX
Summary: Donloaded file via Bluetooth is proposed to be opened from wrong path /usr/sh...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Notifications (other bugs)
Version First Reported In: 5.8.7
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Kai Uwe Broulik
URL:
Keywords:
: 386989 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-09-15 12:53 UTC by opensuse.lietuviu.kalba
Modified: 2017-11-22 14:17 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.11.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description opensuse.lietuviu.kalba 2017-09-15 12:53:57 UTC
After successful transfer of file from phone to computer (into standard downloads folder) via BlueTooth, I see popup with button to open downloaded file. But after pressing this button I get error about not existing /usr/share/plasma/plasmoids/org.kde.plasma.notifications/contents/ui/XX-XX-XX-XX-XX-XX (XX-XX-XX-XX-XX-XX is device ID).
Comment 1 David Rosca 2017-09-15 12:55:30 UTC
That's because of the notification applet job file path heuristics.
Comment 2 Christoph Feck 2017-11-18 15:31:09 UTC
A similar bug 385043 in Ark was resolved by adding an explict URL for the job.
Comment 3 Kai Uwe Broulik 2017-11-22 11:30:30 UTC
*** Bug 386989 has been marked as a duplicate of this bug. ***
Comment 4 David Rosca 2017-11-22 14:17:25 UTC
Git commit cd65c59f6ac0d16d76d1b3f8478454c7a9ac4a5b by David Rosca.
Committed on 22/11/2017 at 14:15.
Pushed by drosca into branch 'Plasma/5.11'.

ReceiveFileJob: Emit correct target path in description signal
FIXED-IN: 5.11.4

M  +5    -4    src/kded/receivefilejob.cpp

https://commits.kde.org/bluedevil/cd65c59f6ac0d16d76d1b3f8478454c7a9ac4a5b