ReceiveFileJob: Emit correct target path in description signal

BUG: 384740
FIXED-IN: 5.11.4